--- a/Module01/ex07/Makefile
+++ b/Module01/ex07/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: user42 <user42@student.42.fr>              +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2020/09/14 16:28:23 by user42            #+#    #+#              #
+#    Updated: 2020/09/14 17:29:58 by user42           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME =			replace
 
 SRCS =			main.cpp			
@@ -10,29 +22,29 @@ CFLAGS =		-Wall -Werror -Wextra
 
 
 %.o:			%.c
-			$(CPP) $(CFLAGS) $<
+				$(CPP) $(CFLAGS) $<
 #%.o:.%.c 		$(CPP) $(CFLAGS) -o $@ -c $<
 
 all:			$(NAME)
 
 $(NAME):		$(OBJS)
-			$(CPP) $(CFLAGS) $(OBJS) -o $(NAME)
+				$(CPP) $(CFLAGS) $(OBJS) -o $(NAME)
 	
 test1:			$(NAME)
-			rm FILENAME.replace
-			./replace test_text1 amour XXX
+				rm FILENAME.replace
+				./replace test_text1 amour XXX
 
 test2:			$(NAME)
-			rm FILENAME.replace
-			./replace test_text2 sed XXX
+				rm FILENAME.replace
+				./replace test_text2 sed XXX
 clean:			
-			rm $(OBJS)
+				rm $(OBJS)
 
 fclean: 		clean
-			rm $(NAME)
-			rm FILENAME.replace
+				rm $(NAME)
+				rm FILENAME.replace
 
 
-re:			fclean all
+re:				fclean all
 
 .PHONY: 		fclean clean all re
