--- a/Module06/ex01/Makefile
+++ b/Module06/ex01/Makefile
@@ -1,30 +1,42 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: user42 <user42@student.42.fr>              +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2020/09/28 16:52:00 by user42            #+#    #+#              #
+#    Updated: 2020/09/28 18:00:19 by user42           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME =			serialize
 
 SRCS =			Serialize.cpp \
-			main.cpp			
+				main.cpp			
 
 OBJS =			$(SRCS:.cpp=.o)
 
 CPP =			clang++
 
-CFLAGS =		-Wall -Werror -Wextra	
+CFLAGS =		-Wall -Werror -Wextra -std=c++98
 
 
 %.o:			%.c
-			$(CPP) $(CFLAGS) $<
+				$(CPP) $(CFLAGS) $<
 #%.o:.%.c 		$(CPP) $(CFLAGS) -o $@ -c $<
 
 all:			$(NAME)
 
 $(NAME):		$(OBJS)
-			$(CPP) $(CFLAGS) $(OBJS) -I. -o $(NAME)
+				$(CPP) $(CFLAGS) $(OBJS) -I. -o $(NAME)
 
 clean:			
-			$(RM) $(OBJS)
+				$(RM) $(OBJS)
 
 fclean: 		clean
-			$(RM) $(NAME)
+				$(RM) $(NAME)
 
-re:			fclean all
+re:				fclean all
 
 .PHONY: 		fclean clean all re
